Fix scrollbars showing unnecessarily

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alatsi&family=JetBrains+Mono:wght@200&family=Lato:wght@100;300;400&family=Lobster&family=Montserrat+Alternates:wght@300;400&family=Montserrat:wght@200;300;400;500;600;700&family=PT+Mono&family=Press+Start+2P&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alatsi&family=JetBrains+Mono:wght@200&family=Lato:wght@100;300;400&family=Lobster&family=Montserrat+Alternates:wght@300;400&family=Montserrat:wght@200;300;400;500;600;700&family=PT+Mono&family=Press+Start+2P&display=swap");
 
 *,
 *::before,
@@ -9,9 +9,8 @@
 }
 
 body {
-  overflow: scroll;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 body::-webkit-scrollbar {
@@ -21,7 +20,7 @@ body::-webkit-scrollbar {
 /* Variables */
 :root {
   --accent-1: white;
-  --ff-1: 'Montserrat', sans-serif;
+  --ff-1: "Montserrat", sans-serif;
 }
 
 /* Utilities */
